# wx-cli

./: Cargo.toml
src/: config.rs
