[package]
name = "wx-cli"
version = "0.2.0"
edition = "2021"
description = "WeChat 4.x (macOS/Linux) local data CLI — decrypt SQLCipher DBs, query chat history, watch new messages"
license = "Apache-2.0"
repository = "https://github.com/jackwener/wx-cli"
keywords = ["wechat", "sqlcipher", "decrypt", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "wx"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# 异步
tokio = { version = "1", features = ["full"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "=1.0.140"
serde_yaml = "0.9"

# SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

# 加密
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
hmac = "0.12"
sha2 = "0.10"
pbkdf2 = "0.12"

# 解压
zstd = "0.13"

# 错误处理
anyhow = "1"

# 时间
chrono = { version = "0.4", features = ["serde"] }

# 跨平台路径
dirs = "5"

# MD5 (联系人表名 Msg_<md5>)
md5 = "0.7"

# 附件 ID 编码（base64url）
base64 = "0.22"

# 正则表达式
regex = "1"
roxmltree = "0.20"

# IPC Windows named pipe（Unix 直接用 tokio::net::UnixListener）
[target.'cfg(windows)'.dependencies]
interprocess = { version = "2", features = ["tokio"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Com",
    "Win32_UI_Shell",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
